--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ p {
   font-weight: var(--fw-light);
 }
 
-main {
+.card-body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -104,7 +104,7 @@ main {
   margin-top: 30px;
   margin-bottom: 30px;
 }
-footer {
+.creator {
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -202,7 +202,7 @@ footer {
 .footer-text {
   font-size: 1rem;
 }
-.attribution {
+footer {
   position: fixed;
   bottom: 0;
   color: white;
@@ -214,6 +214,6 @@ footer {
   font-size: 0.6rem;
 }
 
-.attribution a {
+footer a {
   color: var(--clr-cyan);
 }
